--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: d
 
 d:
-  - dmd-2.072.0
-  - dmd-2.071.1
-  - dmd-2.070.1
-  - dmd-2.069.2
+  - dmd-2.072.1
   - ldc-1.0.0
+  - ldc-1.1.0-beta6
   - gdc-4.9.2
+  - dmd-2.071.2
+  - dmd-2.070.2
+  - dmd-2.069.2
 
 install:
 
