--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: d
 
 d:
-  - dmd-2.072.1
+  - dmd-2.073.0
+  - dmd-2.072.2
   - ldc-1.0.0
-  - ldc-1.1.0-beta6
+  - ldc-1.1.0
   - gdc-4.9.2
   - dmd-2.071.2
   - dmd-2.070.2
-  - dmd-2.069.2
 
 install:
 
