--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,14 @@ addons:
       - libevent-dev
 
 d:
-  - dmd-2.076.0
+  - dmd-2.077.0
+  - dmd-2.076.1
   - dmd-2.075.1
   - dmd-2.074.1
   - dmd-2.073.2
   - dmd-2.072.2
+  - ldc-1.5.0
+  - ldc-1.4.0
   - ldc-1.3.0
   - ldc-1.2.0
   - ldc-1.1.1
