--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
       - libssl-dev
 
 d:
-  - dmd-2.085.0
+  - dmd-2.085.1
   - dmd-2.084.1
   - dmd-2.083.1
   - dmd-2.082.1
@@ -18,6 +18,7 @@ d:
   - dmd-2.078.3
   - dmd-2.077.1
   - dmd-2.076.1
+  - ldc-1.15.0
   - ldc-1.14.0
   - ldc-1.13.0
   - ldc-1.12.0
