--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        dc: [dmd-latest, ldc-latest, dmd-2.094.2, ldc-1.24.0, dmd-2.091.1, dmd-2.088.1, ldc-1.19.0]
+        dc: [dmd-latest, ldc-latest, dmd-2.094.2, ldc-1.24.0, dmd-2.091.1, ldc-1.20.1]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
