--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        dc: [dmd-latest, ldc-latest, dmd-2.094.2, ldc-1.24.0, dmd-2.091.1, ldc-1.20.1]
+        dc: [dmd-latest, ldc-latest]
+        arch: [x86_64]
+        include:
+          - { os: ubuntu-latest, dc: dmd-2.094.2, arch: x86_64 }
+          - { os: ubuntu-latest, dc: dmd-2.091.1, arch: x86_64 }
+          - { os: ubuntu-latest, dc: ldc-1.20.1, arch: x86_64 }
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
