--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       uses: dlang-community/setup-dlang@v2
       with:
           compiler: ${{ matrix.dc }}
+          dub: 1.38.1
     - name: Run tests
       run: |
         dub test --compiler=${DC}
