--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,10 @@ jobs:
       uses: dlang-community/setup-dlang@v2
       with:
           compiler: ${{ matrix.dc }}
+          dub: 1.38.1
     - name: Run tests
+      shell: bash
       run: |
-        dub test --compiler=${DC}
+        dub test
         dub build --root=examples/publisher/
         dub build --root=examples/subscriber/
